# server/src/types/UserEntity.ts
@@ -1,10 +1,10 @@
-import { UserRole } from "../../../shared/types/User";
+import type { UserRole } from '../../../shared/types/User';
 
 export interface UserEntity {
-  id: string;
-  firstName: string;
-  lastName: string;
-  hash: string;
-  email: string;
-  roles: UserRole[];
+	id: string;
+	firstName: string;
+	lastName: string;
+	hash: string;
+	email: string;
+	roles: UserRole[];
 }
