# server/src/utils/generateSwagger.ts
@@ -1,27 +1,29 @@
-import swaggerAutogen from "swagger-autogen";
-import path from "path";
-import fs from "fs";
+import fs from 'node:fs';
+import path from 'node:path';
+import swaggerAutogen from 'swagger-autogen';
 
-const PORT = process.env["PORT"] || "3000";
+const PORT = process.env.PORT || '3000';
 
 const doc = {
-  info: {
-    title: "e-commerce API",
-    version: "1.0.0",
-    description: "API documentation automatically generated by swagger-autogen",
-  },
-  host: `localhost:${PORT}`,
-  basePath: "/",
-  schemes: ["http"],
+	info: {
+		title: 'e-commerce API',
+		version: '1.0.0',
+		description: 'API documentation automatically generated by swagger-autogen',
+	},
+	host: `localhost:${PORT}`,
+	basePath: '/',
+	schemes: ['http'],
 };
 
-const outputPath = path.resolve(process.cwd(), "public/swagger.json");
-const endpointsFiles = [path.resolve(process.cwd(), "server.ts")]; // Passes root Express instance
+const outputPath = path.resolve(process.cwd(), 'public/swagger.json');
+const endpointsFiles = [path.resolve(process.cwd(), 'server.ts')]; // Passes root Express instance
 
 if (!fs.existsSync(path.dirname(outputPath))) {
-    fs.mkdirSync(path.dirname(outputPath), { recursive: true });
+	fs.mkdirSync(path.dirname(outputPath), { recursive: true });
 }
 
 swaggerAutogen()(outputPath, endpointsFiles, doc).then(() => {
-  console.log("Swagger documentation statically generated at public/swagger.json");
+	console.log(
+		'Swagger documentation statically generated at public/swagger.json',
+	);
 });
